# ms_viewer

./: .gitignore  Cargo.toml  README.adoc  index.html  ms_viewer.js
.github/workflows/: pages.yml
assets/: sw.js
src/: lib.rs  main.rs  time_units.rs
src/app/: context.rs  data.rs  mod.rs
src/app/computers/: explode.rs  mod.rs  table.rs
src/app/context/: mod.rs  settings.rs  state.rs
src/app/panes/: behavior.rs  eic.rs  mass_spectrum.rs  masspectrum.rs  mod.rs  plot.rs  settings.rs  table.rs
src/app/panes/central/: plot.rs  table.rs
src/app/panes/left/: mod.rs
src/app/panes/widgets/: eic.rs  mass_spectrum.rs  mod.rs
src/app/tabs/: mod.rs
src/app/tabs/central/: mod.rs  plot.rs  table copy.rs  table.rs
src/app/tabs/left/: mod.rs
src/utils/: egui_tiles.rs  mod.rs  polars.rs
