[package]
edition = "2021"
name = "ms_viewer"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.27.2"
egui_dock = { version = "0.12.0", features = ["serde"] }
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.27.2"
egui_plot = "0.27.2"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.13.0"
ms_parser = { git = "https://github.com/ippras/ms_parser" }
polars = { version = "0.41.2", features = [
    "dtype-array",
    "dtype-struct",
    "dtype-i16",
    "dtype-u16",
    "lazy",
    "pivot",
    "polars-ops",
    "regex",
    "round_series",
    "row_hash",
    "serde",
] }
# polars = { git = "https://github.com/pola-rs/polars", rev = "59d25294c646aef0c228c4c93870695aa1fff9c1", features = [
#     "dtype-array",
#     "dtype-struct",
#     "lazy",
#     "pivot",
#     "polars-ops",
#     "regex",
#     "row_hash",
#     "serde",
# ] }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
uom = { version = "0.36.0", features = ["serde"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
