[package]
edition = "2021"
name = "ms_viewer"
rust-version = "1.76"
version = "0.0.5"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.28.1"
egui_dock = { version = "0.13.0", features = ["serde"] }
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.28.1"
egui_plot = "0.28.1"
# https://github.com/pola-rs/polars/issues/17192
polars = { version = "0.41.3", features = [
    "dtype-struct",
    "dtype-u16",
    "fmt_no_tty",
    "lazy",
    "round_series",
    "serde",
], default-features = false }
# polars = { git = "https://github.com/pola-rs/polars", rev = "21602ba8610ce16e7ba675998e84e238d8066c98", features = [
#     "dtype-struct",
#     "dtype-u16",
#     "fmt_no_tty",
#     "lazy",
#     "round_series",
#     "serde",
# ], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
uom = { version = "0.36.0", features = ["serde"] }


# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
